<resources>
    <string name="app_name"> </string>
    <string name="welcome_message">Loding</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">게스트</string> <!-- 기본 제목, 로그인 안 한 경우 -->
    <string name="nav_header_subtitle">로그인 해주세요</string> <!-- 기본 부제목, 로그인 안 한 경우 -->

    <!-- 로그인 후 메시지 -->
    <string name="user_welcome_message">환영합니다, %1$s님!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="menu_home">홈</string>
    <string name="menu_community">커뮤니티</string>


    <string-array name="search_options">
        <item>제목</item>
        <item>글쓴이</item>
        <item>내용</item>
    </string-array>

    <string-array name="leave_types">
        <item>연차</item>
        <item>반차</item>
        <item>병가</item>
        <item>경조사</item>
    </string-array>

    <string-array name="font_list">
        <item>sans-serif</item>
        <item>serif</item>
        <item>monospace</item>
    </string-array>

    <string-array name="theme_list">
        <item>화이트</item>
        <item>그레이</item>
        <item>모카</item>
    </string-array>




    <string name="menu_option">설정</string>
    <string name="menu_slideshow">옵션</string>
    <string name="menu_people">사원들</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="email_fab">이메일 보내기</string>
    <string-array name="calendar_types">
    <item>개인 캘린더</item>
    <item>공유 캘린더</item>
    </string-array>

    <string name="default_web_client_id">여기에_복사한_WEB_CLIENT_ID</string>
    <string name="channel_name">Timer Channel</string>
    <string name="channel_description">Notification Channel for Timer</string>
    <string name="switch_alarm_text">공지사항 알람</string>
    <string name="intro_logo_desc">Intro Logo</string>
</resources>