<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.company.calendar.ui.main.MainFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_people"
        android:name="com.company.calendar.ui.people.PeopleFragment"
        android:label="@string/menu_people"
        tools:layout="@layout/fragment_people" />
    <fragment
        android:id="@+id/nav_mypage"
        android:name="com.company.calendar.ui.mypage.MypageFragment"
        android:label="@string/menu_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/nav_community"
        android:name="com.company.calendar.ui.community.CommunityFragment"
        android:label="@string/menu_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/nav_option"
        android:name="com.company.calendar.ui.option.OptionFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_option" />
</navigation>